did some realignment, managed to fix a spacing problem by adding a blank icon

--- a/imports/ui/stylesheets/style.css
+++ b/imports/ui/stylesheets/style.css
@@ -84,3 +84,28 @@
 	max-width: 10%
 }
 
+#productionValues {
+	float: right;
+	width: 65%;
+	text-align: right;
+	padding-right: 5px;
+    margin-bottom: 5px;
+}
+
+.productionLabel {
+	font-size: 18px;
+	font-weight: bold;
+}
+
+#consuptionValue {
+	float: right;
+	width: 100%;
+	text-align: right;
+	padding-right: 5px;
+    margin-bottom: 10px;
+
+}
+
+.factoryCards {
+	width: 16%;
+}
